--- a/about.html
+++ b/about.html
@@ -120,7 +120,7 @@
             <p>Mentor</p>
           </div>
           <div class="col-md-3 col-sm-6 column">
-            <div class="image"><img src="rey.JPG" alt=""></div>
+            <div class="image"><img src="images/rey.JPG" alt=""></div>
             <h2>Reynaldi Januar Hudayanto</h2>
           </div>
           <div class="col-md-3 col-sm-6 column">
@@ -128,39 +128,39 @@
             <h2>Aris Munandar</h2>
           </div>
           <div class="col-md-3 col-sm-6 column">
-            <div class="image"><img src="karpus.JPG" alt=""></div>
+            <div class="image"><img src="images/karpus.JPG" alt=""></div>
             <h2>Karpus Pistu Suaha</h2>
           </div>
           <div class="col-md-3 col-sm-6 column">
-            <div class="image"><img src="Aryan.jpg" alt=""></div>
+            <div class="image"><img src="images/Aryan.jpg" alt=""></div>
             <h2>Aryan Rianto</h2>
           </div>
           <div class="col-md-3 col-sm-6 column">
-            <div class="image"><img src="Ory.JPG" alt=""></div>
+            <div class="image"><img src="images/Ory.JPG" alt=""></div>
             <h2>Ory Sinalsal</h2>
           </div>
           <div class="col-md-3 col-sm-6 column">
-            <div class="image"><img src="Alfira.jpeg" alt=""></div>
+            <div class="image"><img src="images/Alfira.jpeg" alt=""></div>
             <h2>Alfira Nabillah Putri</h2>
           </div>
           <div class="col-md-3 col-sm-6 column">
-            <div class="image"><img src="nad.JPG" alt=""></div>
+            <div class="image"><img src="images/nad.JPG" alt=""></div>
             <h2>Nadifah Maulidia</h2>
           </div>
           <div class="col-md-3 col-sm-6 column">
-            <div class="image"><img src="Tyas.jpg" alt=""></div>
+            <div class="image"><img src="images/Tyas.jpg" alt=""></div>
             <h2>Tyas Nariswari</h2>
           </div>
           <div class="col-md-3 col-sm-6 column">
-            <div class="image"><img src="Vio.JPG" alt=""></div>
+            <div class="image"><img src="images/Vio.JPG" alt=""></div>
             <h2>Vio Jotika Sadewa</h2>
           </div>
           <div class="col-md-3 col-sm-6 column">
-            <div class="image"><img src="Argya.JPG" alt=""></div>
+            <div class="image"><img src="images/Argya.JPG" alt=""></div>
             <h2>Argya Syahfani</h2>
           </div>
           <div class="col-md-3 col-sm-6 column">
-            <div class="image"><img src="nova.JPG" alt=""></div>
+            <div class="image"><img src="images/nova.JPG" alt=""></div>
             <h2>Nufailiatul Mahbubah</h2>
           </div>
         </div>
