update chart and mobile responsive

--- a/profile.html
+++ b/profile.html
@@ -87,22 +87,22 @@
   <!-- Page Content -->
   <div id="content" class="content">
     <nav class="navbar navbar-expand-lg navbar-light bg-light shadow-sm">
-      <div class="container-fluid">
+        <div class="container-fluid">
 
-        <button type="button" id="sidebarToggleMain" class="btn border-0 shadow-none text-white ms-2 me-2">
-          <i class="fas fa-bars"></i>
-          <i class="fas fa-times"></i>
-        </button>
+          <button type="button" id="sidebarToggleMain" class="btn border-0 shadow-none text-white ms-2 me-2">
+            <i class="fas fa-bars"></i>
+            <i class="fas fa-times"></i>
+          </button>
 
-        <div class="title-nav ms-3 d-flex align-items-center">
-          <img src="images/pizza.png" alt="Pizza Logo" width="70" height="70" />
-          <div class="ms-3">
-            <p class="header-title mb-0 fw-bold">Dashboard Pizza Sales</p>
-            <p class="header-desc mb-0">Team 22 - Section Palembang</p>
+          <div class="title-nav ms-3 d-flex align-items-center flex-grow-1">
+            <img src="images/pizza.png" alt="Pizza Logo" width="70" height="70" />
+            <div class="ms-3">
+              <p class="header-title mb-0 fw-bold">Dashboard Pizza Sales</p>
+              <p class="header-desc mb-0">Team 22 - Section Palembang</p>
+            </div>
           </div>
         </div>
-      </div>
-    </nav>
+      </nav>
 
     <section class="hero-prof">
       <div class="container-hero">
