--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <i class="fas fa-times"></i>
           </button>
 
-          <div class="title-nav ms-3 d-flex align-items-center">
+          <div class="title-nav ms-3 d-flex align-items-center flex-grow-1">
             <img src="images/pizza.png" alt="Pizza Logo" width="70" height="70" />
             <div class="ms-3">
               <p class="header-title mb-0 fw-bold">Dashboard Pizza Sales</p>
@@ -117,15 +117,18 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-2">
+          <div class="col-lg-3">
             <div class="card h-100">
               <div class="card-body">
                 <h5 class="card-title">% of Sales by Pizza Size</h5>
-                <hr><canvas id="pieChart"></canvas>
+                <hr>
+                <div style="position: relative; height:250px; width:100%;">
+                  <canvas id="pieChart"></canvas>
+                </div>
               </div>
             </div>
           </div>
-          <div class="col-lg-5">
+          <div class="col-lg-4">
             <div class="card h-100">
               <div class="card-body">
                 <h5 class="card-title">Total Sales for Pizza Type the_greek</h5>
